---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Grab the products, byproducts & ingredients
    - Default serpent to sort keys
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 03. 07
  Info:
    - Add the magic hut button next to products
    - Detect the selected factory
    - Strip the trashed icon from the factory name
    - Move the factoryplanner code into its own file
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 03. 05
  Info:
    - Setup the factory container prototypes
    - Give the magic huts an item w/recipe
    - Assign rocket stack sizes
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 03. 04
  Info:
    - Initial commit